# appstream-helper

./: .gitignore  README.md  pyproject.toml  terra-appstream.macros  test.metainfo.xml
lua/: terra_appstream.lua
src/terra_appstream_helper/: __init__.py  util.py  xmlutil.py
